<resources>
    <string name="app_name">GeoChat</string>
    <string name="geochat_logo">GeoChat Logo</string>

    <string name="gc_main_toolbar_anontoggle">Toggle for User Anonymity</string>
    <string name="gc_main_toolbar_alerttoggle">Notification &amp; Alert Sound Toggle</string>

    <string name="regist_placeholder_email">E-mail address</string>
    <string name="regist_placeholder_password">Password</string>
    <string name="regist_bottomsheet_header">New User? Create an account …</string>
    <string name="regist_placeholder_firstname">First Name</string>
    <string name="regist_placeholder_lastname">Last Name</string>
    <string name="regist_create_account_button">Create account …</string>
    <string name="regist_welcome">Welcome to GeoChat!</string>
    <string name="regist_caption_or">or, for existing users …</string>
    <string name="regist_signin_button">Sign in here …</string>

    <string name="regist_welcomeinfo_slidehint">Slide to left to explore GeoChat\'s features &#x2192;</string>
    <string name="regist_welcomeinfo_2_title">What is GeoChat?</string>
    <string name="regist_welcomeinfo_2_paragraph">Send and receive messages from people nearby. From your office to your home, from your street to your neighbourhood…</string>


    <string name="title_activity_map">Map</string>
    <string name="map_hint">Use the zoom buttons below to select the radius around your current location…</string>

    <string name="drawer_section_actions">User Actions</string>
    <string name="drawer_item_settings">App Settings</string>
    <string name="drawer_item_signout">Sign out from GeoChat…</string>
    <string name="drawer_section_about">About the app</string>
    <string name="drawer_item_feedback">Give Feedback</string>
    <string name="drawer_item_about">About GeoChat</string>

    <string name="error_network_connection">You must be connected to the internet to access GeoChat</string>
    <string name="api_message_signin">An error has occurred while attempting to sign-in!</string>
    <string name="api_message_createaccount">An error has occurred while attempting to sign-in!</string>
    <string name="api_message_404">GeoChat servers cannot be reached right now. Please try later…</string>

</resources>
