<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_drawer_nav_item_1"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="My item 1" />
        <item
            android:id="@+id/main_drawer_nav_item_2"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="My item 2" />
    </group>

    <item android:title="@string/drawer_section_actions">
        <menu>
            <item
                android:id="@+id/main_drawer_nav_item_signout"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/drawer_item_signout" />
        </menu>
    </item>

    <item android:title="@string/drawer_section_about">
        <menu>
            <item
                android:id="@+id/main_drawer_nav_item_feedback"
                android:icon="@drawable/ic_feedback_black_24dp"
                android:title="@string/drawer_item_feedback" />
            <item
                android:id="@+id/main_drawer_nav_item_about"
                android:icon="@drawable/ic_explore_black_24dp"
                android:title="@string/drawer_item_about" />
        </menu>
    </item>

</menu>